# xspring

./: .gitignore  Makefile  README.md  build.zig  build.zig.zon
beacons/winter/: Makefile  README.md  ZAPIClient.h  ZAPIClient.m  ZBeacon.h  ZBeacon.m  ZCommandExecutor.h  ZCommandExecutor.m  ZCommandHandler.h  ZCommandHandler.m  ZCommandModel.h  ZCommandModel.m  ZCommandPoller.h  ZCommandPoller.m  ZCommandRegistry.h  ZCommandRegistry.m  ZCommandReporter.h  ZCommandReporter.m  ZCommandService.h  ZCommandService.m  ZSSLBypass.h  ZSSLBypass.m  ZSystemInfo.h  ZSystemInfo.m  build.zig  main.m  payload.m  winter.entitlements
beacons/winter/commands/: README.md  ZAppleScriptCommandHandler.h  ZAppleScriptCommandHandler.m  ZDialogCommandHandler.h  ZDialogCommandHandler.m  ZEchoCommandHandler.h  ZEchoCommandHandler.m  ZLSCommandHandler.h  ZLSCommandHandler.m  ZLoginItemCommandHandler.h  ZLoginItemCommandHandler.m  ZPWDCommandHandler.h  ZPWDCommandHandler.m  ZReflectiveCommandHandler.h  ZReflectiveCommandHandler.m  ZReflectiveCommandHandler.mm  ZScreenshotCommandHandler.h  ZScreenshotCommandHandler.m  ZTCCCheckCommandHandler.h  ZTCCCheckCommandHandler.m  ZTCCJackCommandHandler.h  (+3 more)
include/runtime/: core.h  foundation.h  messaging.h  obf.h  symbol_resolv.h  xspring.h
src/: client.c  core.c  foundation.c  messaging.c  obf.zig
xsummer/: README.md  build.zig
xsummer/include/: client.h  command_queue.h  commands.h  darwin.h  network.h  protocol.h  sysinfo.h
xsummer/src/: client.c  command_queue.c  commands.c  core.c  darwin.c  foundation.c  messaging.c  network.c  obf.zig  protocol.c  sysinfo.c
yclient/: Cargo.toml
yclient/src/: main.rs
yclient/src/api/: client.rs  mod.rs
yclient/src/cli/: client.rs  error.rs  mod.rs
yclient/src/gui/: app.rs  client.rs  mod.rs  screenshot.rs  tab.rs
yclient/src/gui/views/: beacons.rs  beacons_tree.rs  dashboard.rs  listeners.rs  loot.rs  mod.rs  settings.rs
yclient/src/models/: beacon.rs  command.rs  mod.rs  session.rs
yclient/src/utils/: api.rs  error.rs  formatter.rs  mod.rs
zserver/: Cargo.toml  generate_certs.sh
zserver/certs/: server.crt  server.key
zserver/migrations/: 20241129000000_initial.sql
zserver/src/: db.rs  main.rs  router.rs
zserver/src/beacon/: handler.rs  mod.rs  model.rs  service.rs
zserver/src/command/: handler.rs  mod.rs  model.rs  service.rs
zserver/src/protocol/: message.rs
(+28 files in other folders)
