[package]
name = "yclient"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyline = { version = "15.0.0", features = ["with-file-history"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
dirs = "5.0.1"
