[package]
name = "zserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.8"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "sqlite",
    "migrate",
] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
rustls = { version = "0.23.23", features = ["ring"] }
rustls-pemfile = "2.2.0"
