[package]
name = "zserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = { version = "0.22.2", features = ["ring"] }
rustls-pemfile = "2.0.0"
rustls-pki-types = "1.0.1"
base64 = "0.22.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
